
              pamtotiff: do miniswhite properly with 8 and 16 bit samples.

              pamsumm: fix syntax error message.

              pambayer: fix unconditional crash/failure when you aren't using
              Standard Input.

              Add pbmtocis, cistopbm.  Thanks John Elliott
              <jce@seasip.demon.co.uk>.

              Build: tifftopnm builds on systems without fork().

              Build: work with JPEG library Version 7.

              Build: Configure recognizes libvga.a installed without
              libvga.so and offers that as default.

              Build: fix failure of a merge build on a system that doesn't
              have the PNG library.

              Build: fix failure to recognize static library in omitting
              -R from link.

09.06.27 BJH  Release 10.47.00

              Add pamsistoaglyph.  Thanks Scott Pakin.

              pnmpsnr: Use more precise math to conclude that images are
              identical.

              Add /usr/share/netpbm/rgb.txt to search path for color
              dictionary.

              Remove nstring.h from exported interfaces.

              giftopnm: improve efficiency.

              libppmd: Add ppmd_point-based functions (ppmd_linep(), etc).

              pnmremap: fix: -firstisdefault uses an arbitrary color from the
              map as default.

              pnmremap: fix -missingcolor:  where map file (ergo output) is not
              depth 3, uses an arbitrary color.

              pnmremap: fix loss of dithering when the map (and thus the
              output) has lower maxval than the input.  (Old code scales down
              to the new maxval before dithering).

              giftopnm: fix for unlikely case of a block smaller than a code.

              ppmpat: fix crash in -squig.

              ppmpat: fix crash when width or height is zero.

              ppmpat: fix wrong output with -poles.
